--- a/assets/pages_ceo/ceoPost.html
+++ b/assets/pages_ceo/ceoPost.html
@@ -35,8 +35,7 @@
         </form>
     </div>
     <!-- script part -->
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script>
         // 메뉴 추가
         function menuPost() {
