--- a/assets/pages_ceo/ceoSignup.html
+++ b/assets/pages_ceo/ceoSignup.html
@@ -47,28 +47,7 @@
   
     <!-- script part -->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script>
-        function signUp() {
-            const data = {
-                email: $('#email').val(),
-                password: $('#password').val(),
-                confirm: $('#passwordConfirm').val(),
-                storeName: $('#storeName').val(),
-                storeImage: $('#storeImage').val()
-            }
-            console.log(data)
-            axios.post('http://localhost:3000/api/ceo/signup', data)
-            .then(response =>{
-                // 회원가입 성공 시
-                alert('회원가입이 완료되었습니다. 사장님!');
-                location.href = './ceo.html';
-            })
-            .catch(function (error) {
-                alert('회원가입에 실패하였습니다. 다시 돌아가주세요^^');
-                location.href = './ceoSignup.html';
-            })
-        }
-    </script>
+    <script src="../js/ceoUsers.js"></script>
 </body>
 
 </html>
