2023-07-23 sangwoo hojung jaeyong jihye models, migrations 수정, 전체 변경. routes_ 사용자 부분 변경 cartRoutes생성, orderRoute 생성 및 구현 사용자 백엔드 구현 assets- pages_customer 파일 전체 변경

--- a/assets/pages_customer/register.html
+++ b/assets/pages_customer/register.html
@@ -110,7 +110,7 @@
     crossorigin="anonymous"></script>
   <script>
     function signUp() {
-      try {
+
         const data = {
           email: $('#inputEmail').val(),
           verifyNumberInput: $('#inputVerifyNumber').val(),
@@ -119,11 +119,16 @@
         }
         console.log(data)
         axios.post('http://localhost:3000/api/user/signup', data)
-          .then(data => console.log(data.data))
-      } catch (error) {
-        console.log(error)
-      }
-    }
+          .then(response => {
+            alert('회원가입이 완료되었습니다.');
+            location.href = './user/login';
+          },
+           data => console.log(data.data))
+          .catch(function (error) {
+                alert('회원가입에 실패하였습니다.');
+                location.href = './register';
+            })
+        }
 
     function emailSender() {
       try {
