--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
     <title>4조 프로젝트 - 쿼티의민족</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -53,9 +53,5 @@
             </div>
         </footer>
     </div>
-
-
-    <!-- script part -->
-    <script src="../js/main.js"></script>
 </body>
 </html>
