--- a/assets/pages_customer/reviewDetail.html
+++ b/assets/pages_customer/reviewDetail.html
@@ -16,7 +16,7 @@
   <div id="wrap">
     <!-- header -->
     <header id="header">
-      <div class="inner2">
+      <div class="inner">
         <h1><a href="./storeSearch.html">Qwerty's Delivery - 고객용</a></h1>
         <nav class="nav">
           <div id="store-container">
@@ -24,9 +24,9 @@
             <!-- storeImage, storeName, totalRating -->
           </div>
           <ul class="gnb">
-            <li><a href="./review">리뷰</a></li>
-            <li><a href="./reviewEdit">리뷰수정</a></li>
-            <li><a href="./reviewWrite">리뷰삭제</a></li>
+            <li><a href="./review.html">리뷰</a></li>
+            <li><a href="./reviewEdit.html">리뷰수정</a></li>
+            <li><a href="./reviewWrite.html">리뷰삭제</a></li>
             <li><a href="javascript:history.back()">뒤로가기</a></li>
           </ul>
         </nav>
