--- a/assets/pages_customer/cart.html
+++ b/assets/pages_customer/cart.html
@@ -10,6 +10,9 @@
   <title>Qwerty's Delivery</title>
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/customer.css">
+
+  <!-- axios -->
+  <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -34,6 +37,9 @@
     </footer>
   </div>
   
+
+  <!-- script part -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script>
     const getCartList = async () => {
       const menuId = localStorage.getItem('menuId')
