--- a/assets/pages_customer/order.html
+++ b/assets/pages_customer/order.html
@@ -1,73 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
 
-    <!-- Font Awesome CSS -->
-    <link
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <link href="../css/customer.css" rel="stylesheet" />
     <title>스파르타 쇼핑몰 | 주문</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../css/reset.css"/>
+    <link rel="stylesheet" href="../css/customer.css"/>
 
-    <style>
-      .card {
-        cursor: pointer;
-      }
-    </style>
+    <!-- axios -->
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
   <body>
-    <nav
-      class="navbar navbar-expand-sm navbar-dark bg-sparta justify-content-end"
-    >
-      <a class="navbar-brand" href="/goods.html">
-        <img
-          src="/logo_big_tr.png"
-          width="30"
-          height="30"
-          class="d-inline-block align-top"
-          alt=""
-        />
-        쿼티의 민족
-      </a>
-      <button
-        class="navbar-toggler ml-auto"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="true"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div
-        class="navbar-collapse collapse flex-grow-0 ml-auto"
-        id="navbarSupportedContent"
-      >
+    <div id="wrap">
+      <!-- header -->
+      <nav class="navbar navbar-expand-sm navbar-dark bg-sparta justify-content-end">
+        <a class="navbar-brand" href="/goods.html">
+          쿼티의 민족
+        </a>
+        <button
+          class="navbar-toggler ml-auto"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="true"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      <div class="navbar-collapse collapse flex-grow-0 ml-auto" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto text-right">
-          <li class="nav-item" id="link-cart">
-            <a class="nav-link" href="/cart.html">
-              장바구니<i
-                class="fa fa-shopping-cart ml-2"
-                aria-hidden="true"
-              ></i>
+          <li class="nav-item" id="link-cart"><a class="nav-link" href="/cart.html">장바구니<i class="fa fa-shopping-cart ml-2" aria-hidden="true"></i>
             </a>
           </li>
           <li class="nav-item" id="link-logout">
@@ -119,6 +88,8 @@
         </ul>
       </div>
     </nav>
+
+    <!-- main start -->
     <div class="wrap">
       <div class="mb-3">
         <h4><i class="fa fa-truck mr-1" aria-hidden="true"></i>배송지 입력</h4>
@@ -207,9 +178,10 @@
         </div>
       </div>
     </div>
+    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+    <!-- script part -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
