--- a/assets/pages_customer/register.html
+++ b/assets/pages_customer/register.html
@@ -10,107 +10,95 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <!-- Bootstrap CSS -->
+  
+  <title>쿼티의 민족 | 회원가입</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-  <!-- Font Awesome CSS -->
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/reset.css"/>
+  <link rel="stylesheet" href="../css/customer.css"/>
 
-  <link href="../css/customer.css" rel="stylesheet" />
-  <title>쿼티의 민족 | 회원가입</title>
-
-  <style>
-    .jumbotron {
-      border-radius: 0;
-    }
-
-    @media screen and (max-width: 576px) {
-      .form-group {
-        margin-bottom: 0.25rem;
-      }
-    }
-  </style>
+  <!-- axios -->
+  <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
-  <div class="jumbotron bg-sparta text-white text-center" onclick="window.location.href='/'">
-    <h1 class="font-weight-bold">
-      쿼티의 민족
-    </h1>
-  </div>
-  <div class="wrap">
-    <div class="card mx-auto" style="max-width: 480px">
-      <div class="card-body">
-        <div>
-          <div class="form-group row">
-            <label for="inputEmail" class="col-sm-4 col-form-label">
-              계정 (e-mail)
-            </label>
-            <div class="col-sm-8">
-              <div class="input-group">
-                <input type="text" class="form-control" id="inputEmail" placeholder="hello@email.com" />
-                <div class="input-group-append">
-                  <button class="btn btn-outline-sparta" onclick="emailSender()">
-                    중복확인
-                  </button>
+  <div id="wrap">
+    <!-- header -->
+    <header id="header">
+      <div class="inner">
+          <h1><a href="../pages_customer/storeSearch.html">Qwerty's Delivery - 고객용</a></h1>
+      </div>
+    </header>
+    <div class="wrap">
+      <div class="card mx-auto" style="max-width: 480px">
+        <div class="card-body">
+          <div>
+            <div class="form-group row">
+              <label for="inputEmail" class="col-sm-4 col-form-label">
+                계정 (e-mail)
+              </label>
+              <div class="col-sm-8">
+                <div class="input-group">
+                  <input type="text" class="form-control" id="inputEmail" placeholder="hello@email.com" />
+                  <div class="input-group-append">
+                    <button class="btn btn-outline-sparta" onclick="emailSender()">
+                      중복확인
+                    </button>
+                  </div>
                 </div>
+                <small id="emailHelp" class="form-text text-muted">중복확인을 누르면 인증번호가 전송됩니다.</small>
               </div>
-              <small id="emailHelp" class="form-text text-muted">중복확인을 누르면 인증번호가 전송됩니다.</small>
+            </div>
+            <div class="form-group row">
+              <label for="inputVerifyNumber" class="col-sm-4 col-form-label">
+                인증번호
+              </label>
+              <div class="col-sm-8">
+                <input type="text" class="form-control" id="inputVerifyNumber" placeholder="6자리 숫자" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-4 col-form-label">
+                비밀번호
+              </label>
+              <div class="col-sm-8">
+                <input type="password" class="form-control" id="inputPassword" placeholder="영문 소문자, 대문자, 숫자 모두 포함" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPasswordConfirm" class="col-sm-4 col-form-label">
+                비밀번호 확인
+              </label>
+              <div class="col-sm-8">
+                <input type="password" class="form-control" id="inputPasswordConfirm" placeholder="비밀번호 재입력" />
+              </div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="inputVerifyNumber" class="col-sm-4 col-form-label">
-              인증번호
-            </label>
-            <div class="col-sm-8">
-              <input type="text" class="form-control" id="inputVerifyNumber" placeholder="6자리 숫자" />
+          <div class="row d-flex justify-content-around mt-3">
+            <div class="col-6 pr-2">
+              <button type="button" class="btn btn-sparta btn-block" onclick="signUp();">
+                회원가입
+              </button>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">
-              비밀번호
-            </label>
-            <div class="col-sm-8">
-              <input type="password" class="form-control" id="inputPassword" placeholder="영문 소문자, 대문자, 숫자 모두 포함" />
+            <div class="col-6 pl-2">
+              <button type="button" class="btn btn-outline-sparta btn-block" onclick="location.href='./storeSearch.html'">
+                취소
+              </button>
             </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputPasswordConfirm" class="col-sm-4 col-form-label">
-              비밀번호 확인
-            </label>
-            <div class="col-sm-8">
-              <input type="password" class="form-control" id="inputPasswordConfirm" placeholder="비밀번호 재입력" />
-            </div>
-          </div>
-        </div>
-        <div class="row d-flex justify-content-around mt-3">
-          <div class="col-6 pr-2">
-            <button type="button" class="btn btn-sparta btn-block" onclick="signUp()">
-              회원가입
-            </button>
-          </div>
-          <div class="col-6 pl-2">
-            <button type="button" class="btn btn-outline-sparta btn-block" onclick="window.location.href='/'">
-              취소
-            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-    crossorigin="anonymous"></script>
+  
+  <!-- script part -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" rossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
   <script>
     function signUp() {
-
         const data = {
           email: $('#inputEmail').val(),
           verifyNumberInput: $('#inputVerifyNumber').val(),
@@ -121,7 +109,7 @@
         axios.post('http://localhost:3000/api/user/signup', data)
           .then(response => {
             alert('회원가입이 완료되었습니다.');
-            location.href = './user/login';
+            location.href = './storeSearch.html';
           },
            data => console.log(data.data))
           .catch(function (error) {
