--- a/assets/pages_customer/storeSearch.html
+++ b/assets/pages_customer/storeSearch.html
@@ -24,13 +24,14 @@
           <ul class="gnb">
             <li><a href="./login.html">로그인</a></li> <!-- ./login.html -->
             <li><a href="./register.html">회원가입</a></li> <!-- ./register.html -->
+            <li><a href="./store.html">리뷰작성</a></li> <!-- ./register.html -->
           </ul>
         </nav>
 
-        <!-- <div class="searchWrap">
+        <div class="searchWrap">
           <input type="text" placeholder="음식점을 입력해주세요" />
           <button class="search" id="search-form">검색</button>
-        </div> -->
+        </div>
       </div>
     </header>
 
@@ -39,7 +40,6 @@
     <main id="container" class="main">
       <section id="content">
         <ul id="card-list"></ul>
-        <!-- 가게들이 카드 형태로 여기에 뿌려짐 -->
       </section>
     </main>
 
@@ -94,44 +94,6 @@
       }
     };
     StoreCardList.addEventListener('click', storeIdSender);
-
-      // const SearchWords = async (searchWord) => {
-      //   const url = `http://localhost:3000/api/storeInfoList?${searchWord ? `searchWord=${searchWord}` : ''}`
-      //   // fetch 함수를 사용하여, 해당 주소(url)로 GET 요청을 보냅니다. 이를 통해 Server에서 영화 목록을 받아옵니다.
-      //   const response = await fetch(url);  
-
-      //   if (response.status !== 200) {
-      //     throw new Error('API call error!')
-      //   }
-      //   // 'response'의 본문을 JSON 형식으로 Parsing하여 반환합니다.
-      //   return await response.json()
-      // };
-
-      // // function renderMovieCard(movieList) {
-      // //   const cardList = document.querySelector("#card-list");
-
-      // //   cardList.innerHTML = movieList.map((movie) => {
-      // //     return `<li class="movie-card" id=${movie.id}>
-      // //         <img src="https://image.tmdb.org/t/p/w500${movie.poster_path}" alt="${movie.title}">
-      // //         <h3 class="movie-title">${movie.title}</h3>
-      // //         <p>${movie.overview}</p>
-      // //         <p>Rating: ${movie.vote_average}</p>
-      // //       </li>`
-      // //   }).join('')
-      // // }
-
-      // document.addEventListener("DOMContentLoaded", async () => {
-      //   const topRatedMovies = await SearchWords()
-      //   renderMovieCard(topRatedMovies)
-
-      //   // 사용자가 검색어를 입력했을 경우, 실행되는 구문입니다.
-      //   const form = document.querySelector("#search-form");
-      //   form.addEventListener("click", async function () {
-      //     const searchWord = document.querySelector("#search-input").value;
-      //     const topRatedMovies = await SearchWords(searchWord)
-      //     renderMovieCard(topRatedMovies)
-      //   })
-      // })
   </script>
 
 </body>
