--- a/assets/pages_ceo/ceo.html
+++ b/assets/pages_ceo/ceo.html
@@ -89,7 +89,7 @@
                                     <label for="price">가격:</label>
                                     <input type="text" id="price" required />
                                     <br>
-                                    <input type="button" value="메뉴 수정" class="changeBtn" />
+                                    <input type="button" value="메뉴 수정" class="changeBtn" onclick="menuChange(item.menuId, item.menuName, item.menuImage, item.price)" />
                                 </form>
                             </div>
                         </div>
